# charset

./: .gitignore  Cargo.toml  package.json  rustfmt.toml
src/: lib.rs
src/builtin/: general_category.rs  generated.rs  mod.rs  property_bool.rs  property_names.rs  property_values.rs  script_extension.rs  sentence_break.rs  word_break.rs
src/dump/: mod.rs
tests/: generate.sh  main.rs
tests/general_category/: generated.rs  mod.rs
