[package]
name = "character-set"
version = "0.4.0"
authors = ["Aster <192607617@qq.com>"]
description = "High performance `set.contains(char)`"
repository = "https://github.com/oovm/charset"
documentation = "https://docs.rs/character-set"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

exclude = ["tests/*"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
ucd-trie = "0.1.5"

[build-dependencies]
